crates/rome_console/tests/markup/closing_element_mismatch.stderr
error: closing element mismatch

         = note: found closing element Error
         = note: expected Emphasis

 --> tests/markup/closing_element_mismatch.rs:3:21
  |
3 |         <Emphasis></Error>
  |                     ^^^^^
