crates/rome_console/tests/markup/closing_element_mismatch.rs
fn main() {
    rome_console::markup! {
        <Emphasis></Error>
    }
}
